--- a/dist_cal.ipynb
+++ b/dist_cal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_min_max_values(participants_dict, weights):\n",
+    "    # Inicialitzar els valors mínims i màxims per cada atribut\n",
+    "    min_values = {\n",
+    "        'university': float('inf'),\n",
+    "        'interests': float('inf'),\n",
+    "        'preferred_role': float('inf'),\n",
+    "        'availability': float('inf'),\n",
+    "        'programming_skills': float('inf'),\n",
+    "        'interests_in_challenges': float('inf'),\n",
+    "        'languages': float('inf'),\n",
+    "        'experience': float('inf'),\n",
+    "        'maturity': float('inf'),\n",
+    "        'profile': float('inf'),\n",
+    "        'friends': float('inf')\n",
+    "    }\n",
+    "\n",
+    "    max_values = {\n",
+    "        'university': float('-inf'),\n",
+    "        'interests': float('-inf'),\n",
+    "        'preferred_role': float('-inf'),\n",
+    "        'availability': float('-inf'),\n",
+    "        'programming_skills': float('-inf'),\n",
+    "        'interests_in_challenges': float('-inf'),\n",
+    "        'languages': float('-inf'),\n",
+    "        'experience': float('-inf'),\n",
+    "        'maturity': float('-inf'),\n",
+    "        'profile': float('-inf'),\n",
+    "        'friends': float('-inf')\n",
+    "    }\n",
+    "\n",
+    "    # Iterar sobre tots els participants i calcular les distàncies\n",
+    "    participant_ids = list(participants_dict.keys())\n",
+    "    \n",
+    "    for i in range(len(participant_ids)):\n",
+    "        for j in range(i + 1, len(participant_ids)):  # Evitar calcular dues vegades la mateixa parella\n",
+    "            p1 = participants_dict[participant_ids[i]]\n",
+    "            p2 = participants_dict[participant_ids[j]]\n",
+    "            \n",
+    "            \n",
+    "            # Calcula les distàncies per atributs individuals\n",
+    "            d_university = dist_university(p1.university, p2.university) * weights['university']\n",
+    "            d_interests = dist_one_hot_encoding(p1.interests, p2.interests) * weights['interests']\n",
+    "            d_preferred_role = dist_preferred_role(p1.preferred_role, p2.preferred_role) * weights['preferred_role']\n",
+    "            d_availability = dist_one_hot_encoding(p1.availability, p2.availability) * weights['availability']\n",
+    "            d_programming_skills = dist_programming_skills(p1.programming_skills, p2.programming_skills) * weights['programming_skills']\n",
+    "            d_interests_in_challenges = dist_one_hot_encoding(p1.interest_in_challenges, p2.interest_in_challenges) * weights['interests_in_challenges']\n",
+    "            d_languages = dist_language(p1.languages_ordered, p2.languages_ordered) * weights['languages']\n",
+    "            d_experience = abs(p1.experience - p2.experience) * weights['experience']\n",
+    "            d_maturity = abs(p1.maturity - p2.maturity) * weights['maturity']\n",
+    "            d_profile = (abs(p1.Tryhard - p2.Tryhard) + abs(p1.Rookie - p2.Rookie) + abs(p1.Learner - p2.Learner) + abs(p1.Portfolio - p2.Portfolio)) * weights['profile']\n",
+    "            d_friend = dist_friends(p1.friend_registration, p2.friend_registration, p1.id, p2.id) * weights['friends']\n",
+    "            \n",
+    "            # Actualitzar min i max per a cada atribut\n",
+    "            min_values['university'] = min(min_values['university'], d_university)\n",
+    "            max_values['university'] = max(max_values['university'], d_university)\n",
+    "\n",
+    "            min_values['interests'] = min(min_values['interests'], d_interests)\n",
+    "            max_values['interests'] = max(max_values['interests'], d_interests)\n",
+    "\n",
+    "            min_values['preferred_role'] = min(min_values['preferred_role'], d_preferred_role)\n",
+    "            max_values['preferred_role'] = max(max_values['preferred_role'], d_preferred_role)\n",
+    "\n",
+    "            min_values['availability'] = min(min_values['availability'], d_availability)\n",
+    "            max_values['availability'] = max(max_values['availability'], d_availability)\n",
+    "\n",
+    "            min_values['programming_skills'] = min(min_values['programming_skills'], d_programming_skills)\n",
+    "            max_values['programming_skills'] = max(max_values['programming_skills'], d_programming_skills)\n",
+    "\n",
+    "            min_values['interests_in_challenges'] = min(min_values['interests_in_challenges'], d_interests_in_challenges)\n",
+    "            max_values['interests_in_challenges'] = max(max_values['interests_in_challenges'], d_interests_in_challenges)\n",
+    "\n",
+    "            min_values['languages'] = min(min_values['languages'], d_languages)\n",
+    "            max_values['languages'] = max(max_values['languages'], d_languages)\n",
+    "\n",
+    "            min_values['experience'] = min(min_values['experience'], d_experience)\n",
+    "            max_values['experience'] = max(max_values['experience'], d_experience)\n",
+    "\n",
+    "            min_values['maturity'] = min(min_values['maturity'], d_maturity)\n",
+    "            max_values['maturity'] = max(max_values['maturity'], d_maturity)\n",
+    "\n",
+    "            min_values['profile'] = min(min_values['profile'], d_profile)\n",
+    "            max_values['profile'] = max(max_values['profile'], d_profile)\n",
+    "\n",
+    "            min_values['friends'] = min(min_values['friends'], d_friend)\n",
+    "            max_values['friends'] = max(max_values['friends'], d_friend)\n",
+    "\n",
+    "    return min_values, max_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +355,7 @@
     "    'interests': 0.2,\n",
     "    'preferred_role': 0.3,\n",
     "    'availability': 0.1,\n",
-    "    'programming_skils': 0.1,\n",
+    "    'programming_skills': 0.1,\n",
     "    'interests_in_challenges': 0.05,\n",
     "    'languages': 0.05,\n",
     "    'experience': 0.05,\n",
@@ -273,55 +368,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combined_distance(participant1: Participant, participant2: Participant, weigths: dict[str,float]):\n",
-    "    d_university = dist_university(participant1.university, participant2.university)*weigths['university']\n",
-    "    d_interests = dist_one_hot_encoding(participant1.interests, participant2. interests)*weigths['interests']\n",
-    "    d_preferred_role = dist_preferred_role(participant1.preferred_role, participant2. preferred_role)*weigths['preferred_role']\n",
-    "    d_availability = dist_one_hot_encoding(participant1.availability, participant2. availability)*weigths['availability']\n",
-    "    d_programming_skills = dist_programming_skills(participant1.programming_skills, participant2.programming_skills)*weigths['programming_skils']\n",
-    "    d_interests_in_challenges = dist_one_hot_encoding(participant1.interest_in_challenges, participant2.interest_in_challenges)*weigths['interests_in_challenges']\n",
-    "    d_languages = dist_language(participant1.languages_ordered, participant2.languages_ordered)*weigths['languages']\n",
-    "    d_experience = abs(participant1.experience - participant2.experience)*weigths['experience']\n",
-    "    d_maturity = abs(participant1.maturity - participant2.maturity)*weigths['maturity']\n",
-    "    d_profile = (abs(participant1.Tryhard - participant2.Tryhard) + abs(participant1.Rookie - participant2.Rookie) + abs(participant1.Learner - participant2.Learner) +  abs(participant1.Portfolio - participant2.Portfolio))*weights['profile']\n",
-    "    d_friend = dist_friends(participant1.friend_registration, participant2.friend_registration, participant1.id, participant2.id) * weights['friends']\n",
+    "def combined_distance(participant1: Participant, participant2: Participant, weights: dict[str, float], min_values: dict, max_values: dict):\n",
+    "    # Calcular les distàncies per atribut\n",
+    "    d_university = dist_university(participant1.university, participant2.university)\n",
+    "    d_interests = dist_one_hot_encoding(participant1.interests, participant2.interests)\n",
+    "    d_preferred_role = dist_preferred_role(participant1.preferred_role, participant2.preferred_role)\n",
+    "    d_availability = dist_one_hot_encoding(participant1.availability, participant2.availability)\n",
+    "    d_programming_skills = dist_programming_skills(participant1.programming_skills, participant2.programming_skills)\n",
+    "    d_interests_in_challenges = dist_one_hot_encoding(participant1.interest_in_challenges, participant2.interest_in_challenges)\n",
+    "    d_languages = dist_language(participant1.languages_ordered, participant2.languages_ordered)\n",
+    "    d_experience = abs(participant1.experience - participant2.experience)\n",
+    "    d_maturity = abs(participant1.maturity - participant2.maturity)\n",
+    "    d_profile = (abs(participant1.Tryhard - participant2.Tryhard) + abs(participant1.Rookie - participant2.Rookie) + abs(participant1.Learner - participant2.Learner) + abs(participant1.Portfolio - participant2.Portfolio))\n",
+    "    d_friend = dist_friends(participant1.friend_registration, participant2.friend_registration, participant1.id, participant2.id)\n",
+    "\n",
+    "    # Normalitzar les distàncies utilitzant els mínims i màxims\n",
+    "    d_university_normalized = (d_university - min_values['university']) / (max_values['university'] - min_values['university']) if max_values['university'] > min_values['university'] else 0\n",
+    "    d_interests_normalized = (d_interests - min_values['interests']) / (max_values['interests'] - min_values['interests']) if max_values['interests'] > min_values['interests'] else 0\n",
+    "    d_preferred_role_normalized = (d_preferred_role - min_values['preferred_role']) / (max_values['preferred_role'] - min_values['preferred_role']) if max_values['preferred_role'] > min_values['preferred_role'] else 0\n",
+    "    d_availability_normalized = (d_availability - min_values['availability']) / (max_values['availability'] - min_values['availability']) if max_values['availability'] > min_values['availability'] else 0\n",
+    "    d_programming_skills_normalized = (d_programming_skills - min_values['programming_skills']) / (max_values['programming_skills'] - min_values['programming_skills']) if max_values['programming_skills'] > min_values['programming_skills'] else 0\n",
+    "    d_interests_in_challenges_normalized = (d_interests_in_challenges - min_values['interests_in_challenges']) / (max_values['interests_in_challenges'] - min_values['interests_in_challenges']) if max_values['interests_in_challenges'] > min_values['interests_in_challenges'] else 0\n",
+    "    d_languages_normalized = (d_languages - min_values['languages']) / (max_values['languages'] - min_values['languages']) if max_values['languages'] > min_values['languages'] else 0\n",
+    "    d_experience_normalized = (d_experience - min_values['experience']) / (max_values['experience'] - min_values['experience']) if max_values['experience'] > min_values['experience'] else 0\n",
+    "    d_maturity_normalized = (d_maturity - min_values['maturity']) / (max_values['maturity'] - min_values['maturity']) if max_values['maturity'] > min_values['maturity'] else 0\n",
+    "    d_profile_normalized = (d_profile - min_values['profile']) / (max_values['profile'] - min_values['profile']) if max_values['profile'] > min_values['profile'] else 0\n",
+    "    d_friend_normalized = (d_friend - min_values['friends']) / (max_values['friends'] - min_values['friends']) if max_values['friends'] > min_values['friends'] else 0\n",
+    "\n",
+    "    # Multiplicar les distàncies normalitzades pels pesos corresponents\n",
+    "    d_university_weighted = d_university_normalized * weights['university']\n",
+    "    d_interests_weighted = d_interests_normalized * weights['interests']\n",
+    "    d_preferred_role_weighted = d_preferred_role_normalized * weights['preferred_role']\n",
+    "    d_availability_weighted = d_availability_normalized * weights['availability']\n",
+    "    d_programming_skills_weighted = d_programming_skills_normalized * weights['programming_skills']\n",
+    "    d_interests_in_challenges_weighted = d_interests_in_challenges_normalized * weights['interests_in_challenges']\n",
+    "    d_languages_weighted = d_languages_normalized * weights['languages']\n",
+    "    d_experience_weighted = d_experience_normalized * weights['experience']\n",
+    "    d_maturity_weighted = d_maturity_normalized * weights['maturity']\n",
+    "    d_profile_weighted = d_profile_normalized * weights['profile']\n",
+    "    d_friend_weighted = d_friend_normalized * weights['friends']\n",
+    "\n",
+    "    # Sumar les distàncies ponderades\n",
     "    total_distance = (\n",
-    "        d_university +\n",
-    "        d_interests +\n",
-    "        d_preferred_role +\n",
-    "        d_availability +\n",
-    "        d_programming_skills +\n",
-    "        d_interests_in_challenges +\n",
-    "        d_languages + \n",
-    "        d_experience +\n",
-    "        d_maturity +\n",
-    "        d_profile\n",
+    "        d_university_weighted +\n",
+    "        d_interests_weighted +\n",
+    "        d_preferred_role_weighted +\n",
+    "        d_availability_weighted +\n",
+    "        d_programming_skills_weighted +\n",
+    "        d_interests_in_challenges_weighted +\n",
+    "        d_languages_weighted +\n",
+    "        d_experience_weighted +\n",
+    "        d_maturity_weighted +\n",
+    "        d_profile_weighted +\n",
+    "        d_friend_weighted\n",
     "    )\n",
-    "    return total_distance"
+    "    return total_distance\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1.2166170142336974</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m1.2166170142336974\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "participant1 = participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c']\n",
+    "participant2 = participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c']\n",
+    "min_values, max_values = get_min_max_values(participants_dict, weights)\n",
+    "total_normalized_distance = combined_distance(participant1, participant2, weights, min_values, max_values)\n",
+    "print(total_normalized_distance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3111111111111111"
+       "{'university': 199999.80000000002,\n",
+       " 'interests': 3.6,\n",
+       " 'preferred_role': 1.5,\n",
+       " 'availability': 0.5,\n",
+       " 'programming_skills': 0.6493589743589744,\n",
+       " 'interests_in_challenges': 0.15000000000000002,\n",
+       " 'languages': 49999.950000000004,\n",
+       " 'experience': 1.1512925464970232,\n",
+       " 'maturity': 1.05,\n",
+       " 'profile': 0.07623779747805691,\n",
+       " 'friends': 10}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined_distance(participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],participants_dict['2ebad15c-c0ef-4c04-ba98-c5d98403a90c'],weights)"
+    "max_values"
    ]
   }
  ],
