--- a/Preprocessing/dfcreation.ipynb
+++ b/Preprocessing/dfcreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[924 rows x 23 columns]>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "4  [Restb.ai Challenge, AED Challenge, Mango Chal...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "      <th>0</th>\n",
        "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
        "      <td>21</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[Fintech, Blockchain, Cybersecurity, Productiv...</td>\n",
        "      <td>Design</td>\n",
@@ -512,7 +512,7 @@
        "      <th>1</th>\n",
        "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
        "      <td>[Productivity, Enterprise, DevOps, Health, Rob...</td>\n",
        "      <td>Analysis</td>\n",
@@ -529,7 +529,7 @@
        "      <th>2</th>\n",
        "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universidad de Sevilla</td>\n",
        "      <td>[Lifehacks, Health, Cybersecurity, Communicati...</td>\n",
        "      <td>Analysis</td>\n",
@@ -546,7 +546,7 @@
        "      <th>3</th>\n",
        "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[Mobile, Cybersecurity, Quantum, E-commerce/Re...</td>\n",
        "      <td>Design</td>\n",
@@ -563,7 +563,7 @@
        "      <th>4</th>\n",
        "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
        "      <td>[Quantum, Fintech, Blockchain, DevOps, Lifehac...</td>\n",
        "      <td>Design</td>\n",
@@ -582,11 +582,11 @@
       ],
       "text/plain": [
        "                                     id  age  year_of_study  \\\n",
-       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21            4.0   \n",
-       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20            3.0   \n",
-       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21            3.0   \n",
-       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21            3.0   \n",
-       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20            3.0   \n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21              4   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20              3   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21              3   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21              3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20              3   \n",
        "\n",
        "                                     university  \\\n",
        "0  Universitat Internacional de Catalunya (UIC)   \n",
@@ -645,7 +645,7 @@
        "4  [Restb.ai Challenge, AED Challenge, Mango Chal...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
     "    '2nd year': 2,\n",
     "    '3rd year': 3,\n",
     "    '4th year': 4,\n",
-    "    'master': 5,\n",
+    "    'Masters': 5,\n",
     "    'PhD': 6\n",
     "}\n",
     "\n",
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "      <th>0</th>\n",
        "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
        "      <td>21</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Design</td>\n",
@@ -735,7 +735,7 @@
        "      <th>1</th>\n",
        "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
        "      <td>[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -752,7 +752,7 @@
        "      <th>2</th>\n",
        "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universidad de Sevilla</td>\n",
        "      <td>[0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -769,7 +769,7 @@
        "      <th>3</th>\n",
        "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -786,7 +786,7 @@
        "      <th>4</th>\n",
        "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
        "      <td>[1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -805,11 +805,11 @@
       ],
       "text/plain": [
        "                                     id  age  year_of_study  \\\n",
-       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21            4.0   \n",
-       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20            3.0   \n",
-       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21            3.0   \n",
-       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21            3.0   \n",
-       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20            3.0   \n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21              4   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20              3   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21              3   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21              3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20              3   \n",
        "\n",
        "                                     university  \\\n",
        "0  Universitat Internacional de Catalunya (UIC)   \n",
@@ -868,7 +868,7 @@
        "4  [Restb.ai Challenge, AED Challenge, Mango Chal...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "       \"Don't care\"], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "array(['Intermediate', 'Beginner', 'Advanced'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "      <th>0</th>\n",
        "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
        "      <td>21</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1004,7 +1004,7 @@
        "      <th>1</th>\n",
        "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
        "      <td>[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -1020,7 +1020,7 @@
        "      <th>2</th>\n",
        "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universidad de Sevilla</td>\n",
        "      <td>[0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -1036,7 +1036,7 @@
        "      <th>3</th>\n",
        "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1052,7 +1052,7 @@
        "      <th>4</th>\n",
        "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
        "      <td>[1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1070,11 +1070,11 @@
       ],
       "text/plain": [
        "                                     id  age  year_of_study  \\\n",
-       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21            4.0   \n",
-       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20            3.0   \n",
-       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21            3.0   \n",
-       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21            3.0   \n",
-       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20            3.0   \n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21              4   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20              3   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21              3   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21              3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20              3   \n",
        "\n",
        "                                     university  \\\n",
        "0  Universitat Internacional de Catalunya (UIC)   \n",
@@ -1126,7 +1126,7 @@
        "4  [Restb.ai Challenge, AED Challenge, Mango Chal...    4.394449  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
        "       'Portuguese', nan], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "      <th>0</th>\n",
        "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
        "      <td>21</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1239,7 +1239,7 @@
        "      <th>1</th>\n",
        "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
        "      <td>[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -1255,7 +1255,7 @@
        "      <th>2</th>\n",
        "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universidad de Sevilla</td>\n",
        "      <td>[0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...</td>\n",
        "      <td>Analysis</td>\n",
@@ -1271,7 +1271,7 @@
        "      <th>3</th>\n",
        "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
        "      <td>21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
        "      <td>[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1287,7 +1287,7 @@
        "      <th>4</th>\n",
        "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
        "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
        "      <td>[1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...</td>\n",
        "      <td>Design</td>\n",
@@ -1305,11 +1305,11 @@
       ],
       "text/plain": [
        "                                     id  age  year_of_study  \\\n",
-       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21            4.0   \n",
-       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20            3.0   \n",
-       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21            3.0   \n",
-       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21            3.0   \n",
-       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20            3.0   \n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   21              4   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   20              3   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   21              3   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   21              3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   20              3   \n",
        "\n",
        "                                     university  \\\n",
        "0  Universitat Internacional de Catalunya (UIC)   \n",
@@ -1361,7 +1361,7 @@
        "4                                    [English]  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "4                                    [English]       3.4  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1656,7 +1656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
